# lablabai-hackathon

./: .gitignore  README.md  backend.py  requirements.txt
api/: Dockerfile  Makefile  README.md  pyproject.toml
api/agent/: detect_transformations.py  detection_modules.py  prompts.py  toolmaker.py  transform_modules.py  transform_modules.test.py
api/database/: __init__.py  task.py
api/src/agent/: agent.py  app.py
api/src/database/: __init__.py  client.py  task.py  util.py
api/src/detection/: __init__.py  detect_transformations.py  prompts.py  util.py
api/src/python_execution/: docker_requirements.txt  readme.md  server.py  supabase_client.py  test.ipynb
api/src/transformation/: __init__.py  prompts.py  toolmaker.py  transformations.py
test_csv/: Financials.csv  marketing_campaign.csv  test.csv
web-app/: package-lock.json  package.json  tailwind.config.js
web-app/app/: editor.tsx  form.tsx  layout.tsx  page.tsx  postuser.ts  table.tsx
web-app/app/dashboard/: page.tsx
web-app/components/ui/: button.tsx  popover.tsx
