[tool.poetry]
name = "lablabai"
version = "0.1.0"
description = ""
authors = ["robertlukoshko <robert.lukoshko@gmail.com>"]
readme = "README.md"
packages = [{include = "lablabai"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"
supabase = "^1.0.3"
docker = "^6.1.3"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
