[tool.poetry]
name = "lablabai"
version = "0.1.0"
description = ""
authors = ["robertlukoshko <robert.lukoshko@gmail.com>"]
readme = "README.md"
packages = [{include = "lablabai"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"
supabase = "^1.0.3"
pandas = "^2.0.3"
annotated-types = "0.5.0"
anyio = "3.7.1"
async-timeout = "4.0.3"
attrs = "23.1.0"
certifi = "2023.7.22"
chardet = "4.0.0"
charset-normalizer = "3.2.0"
click = "8.1.7"
dataclasses = "0.6"
deprecation = "2.1.0"
frozenlist = "1.4.0"
fuzzywuzzy = "0.18.0"
gensim = "4.3.1"
h11 = "0.14.0"
idna = "2.10"
iniconfig = "2.0.0"
joblib = "1.3.2"
levenshtein = "0.21.1"
multidict = "6.0.4"
nltk = "3.8.1"
numpy = "1.25.2"
openai = "0.27.8"
packaging = "23.1"
patsy = "0.5.3"
pluggy = "1.2.0"
py = "1.11.0"
pytest = "6.2.5"
python-dateutil = "2.8.2"
python-levenshtein = "0.21.1"
python-multipart = "0.0.6"
pytz = "2023.3"
rapidfuzz = "3.2.0"
regex = "2023.8.8"
requests = "2.25.1"
rfc3986 = "1.5.0"
scikit-learn = "1.3.0"
six = "1.16.0"
smart-open = "6.3.0"
sniffio = "1.3.0"
statsmodels = "0.14.0"
threadpoolctl = "3.2.0"
toml = "0.10.2"
tzdata = "2023.3"
yarl = "1.9.2"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
